<resources>
    <string name="app_name">AppCoordenadasGPS</string>
    <string name="txt_coordenadas_gps">Coordenadas GPS</string>
    <string name="txt_valor_zero">0.00</string>
    <string name="txt_latitute">Latitute</string>
    <string name="txt_longitude">Longitude</string>
    <string name="pin_gps_do_mapa">Pin GPS do Mapa</string>
    <string name="image_pin_gps">image_pin_gps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="api_key">AIzaSyCm5XhGkhUtYGlCPnGxWXodpj5ZogAuesI</string>
</resources>