<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txt_coordenadas_gps"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/txt_latitute"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/txtValorLatitude"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/txtLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        android:text="@string/txt_longitude"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/map"
        app:layout_constraintEnd_toStartOf="@+id/txtValorLongitude"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLatitude"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/txtValorLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/txt_valor_zero"
        android:textColor="@color/text_color"
        android:textColorHint="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/txtValorLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="80dp"
        android:hint="@string/txt_valor_zero"
        android:textColor="@color/text_color"
        android:textColorHint="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtValorLatitude" />

    <ImageView
        android:id="@+id/imgPinGPS"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/image_pin_gps"
        app:layout_constraintBottom_toTopOf="@+id/txtValorLatitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228"
        app:srcCompat="@drawable/ic_gps_pin_svg" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="284dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtValorLongitude" />

</androidx.constraintlayout.widget.ConstraintLayout>